third_party/move/move-compiler-v2/tests/checking-lang-v2.4/constant_script_visibility.move
module 0x42::M {
    // public(script) is not a valid visibility modifier for constants
    public(script) const Foo: u64 = 0;
}
